hphp/test/slow/reflection/setAccessibleTwo.php.expectf
Fatal error: %s
Stack trace:
#0 %ssetAccessibleTwo.php(14): ReflectionProperty->getValue()
#1 {main}
